# Easy-Configuration-Format

./: Cargo.toml  readme.md  specification.txt
examples/: benchmark.rs  example_settings.ecf  example_settings.toml  example_settings.txt  main.rs
src/: data.rs  errors.rs  file.rs  lib.rs  utils.rs
