[package]
name = "easy-configuration-format"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A settings format that's just all-around simple"
repository = "https://github.com/What42Pizza/rust-easy-configuration-format"
readme = "readme.md"
keywords = ["config", "configuration", "settings"]
categories = ["config"]
